tests/neg-macros/newClassExtendsNoParents/Test_2.scala
import scala.language.experimental.mode
def test: Any = makeClass("foo") // error
